crates/zenith/tests/snapshots/screens__session_version__160x48__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
 ZENITH   1 Session  2 APIs  3 Log  4 History                ·     ·                        ••      ·        ∙  ·                                        ? keys
       ∙        ·                                       *                                **        •               •       *
 •   ∙·                                                      ∙                    ·                                                         •
                     ∙                   ·              *               ∙    *                  ∙                   ·                              ·
∙                                                                       •                                          ·
             •             *         *         •                                                             ∙
                   ∙                               ∙                                                            ·
          •                                  ·      ·                                                                               *            ∙
*                                   ∙ ∙                    *     ·                  ∙       ·  ·                                         ·
      ∙                                                ∙                                        *                        ·     ∙            *         ·
                                                                                                       •                                           •


      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   · Connected to SOLAR 0.1.0 in 1.84 ms: protocol solar/1, manifest 2.0.0, 5 APIs.
     This SOLAR has no solar.cancel. Type / for the commands, or ? for every key.
 › /version
    ok   solar.version 1.0.0 · 0.48 ms · 0.17 ms in SOLAR · #3

      ▄▄██████▄▄
    ▄████████████▄
   ▄████              SOLAR
   ████████████████   The central API of the Constellation
   ████████████████   NIPS-CERN
              ████▀   0.1.0
    ▀████████████▀
      ▀▀██████▀▀

   solar_version            0.1.0
   protocol                 solar/1
   manifest_schema_version  2.0.0
   build
     git_commit_short  c9c566b22e2b
     profile           release
     rustc_version     rustc 1.97.1
     target            x86_64-pc-windows-msvc
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Type / for the commands, or ? for every key.                                                                                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ──●── SOLAR 0.1.0 · solar/1 ─── last call 0.48 ms ─── in orbit 2s ────────────────────────────────────────────────────────────────────────────────────────────
--- every cell not listed is #F5F1E8 on #0B0C14
 0:  0-7   #FFC23D on #0B0C14 bold
 0: 10-18  #FFC23D on #0B0C14 bold underlined
 0:153-153 #FFC23D on #0B0C14 bold
13:  3-18  #FFC23D on #0B0C14
14:  3-18  #FFC23D on #0B0C14
15:  3-18  #FFC23D on #0B0C14
15: 22-26  #FFC23D on #0B0C14 bold
16:  3-18  #FFC23D on #0B0C14
17:  3-18  #FFC23D on #0B0C14
18:  3-18  #FFC23D on #0B0C14
19:  3-18  #FFC23D on #0B0C14
20:  3-18  #FFC23D on #0B0C14
22:  3-3   #FFC23D on #0B0C14
24:  0-10  #FFC23D on #0B0C14
25:  3-6   #FFC23D on #0B0C14 bold reversed
25:  9-21  #FFC23D on #0B0C14
27:  3-18  #FFC23D on #0B0C14
28:  3-18  #FFC23D on #0B0C14
29:  3-18  #FFC23D on #0B0C14
29: 22-26  #FFC23D on #0B0C14 bold
30:  3-18  #FFC23D on #0B0C14
31:  3-18  #FFC23D on #0B0C14
32:  3-18  #FFC23D on #0B0C14
33:  3-18  #FFC23D on #0B0C14
34:  3-18  #FFC23D on #0B0C14
36:  3-25  #FFC23D on #0B0C14
37:  3-25  #FFC23D on #0B0C14
38:  3-25  #FFC23D on #0B0C14
39:  3-7   #FFC23D on #0B0C14
40:  5-20  #FFC23D on #0B0C14
41:  5-20  #FFC23D on #0B0C14
42:  5-20  #FFC23D on #0B0C14
43:  5-20  #FFC23D on #0B0C14
45:  1-3   #FFC23D on #0B0C14
47:  3-3   #FFC23D on #0B0C14
47:  7-17  #FFC23D on #0B0C14 bold
